src/test/ui/issues/issue-3521-2.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3521-2.rs:4:23
   |
LL |     static y: isize = foo + 1;
   |            -          ^^^ non-constant value
   |            |
   |            help: consider using `let` instead of `static`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
